--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="@id/tv_name"
         app:layout_constraintStart_toStartOf = "parent"
         app:layout_constraintBottom_toBottomOf = "@id/tv_phone"
-        android:contentDescription="string/lv_photograph_content_description"
+        android:contentDescription="@string/lv_photograph_content_description"
         android:layout_width="40dp"
         android:layout_height="40dp"
         tools:src="@tools:sample/avatars"/>
@@ -43,6 +43,8 @@
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/iv_photograph"
         app:layout_constraintTop_toTopOf="@+id/iv_photograph"
+        style="@style/TextViewDefault"
+
         tools:text="Nome do Contato" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
